# fosslight_util

./: .bumpversion.cfg  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  REUSE.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: publish-release.yml  pull-request.yml  test.yml
.reuse/: dep5
LICENSES/: CC-BY-3.0.txt
src/fosslight_util/: _create_frequenctLicenses.py  _get_downloadable_url.py  _help.py  compare_yaml.py  constant.py  convert_excel_to_yaml.py  correct.py  cover.py  download.py  download_ftp_tree.py  exclude.py  get_pom_license.py  help.py  oss_item.py  output_format.py  parsing_yaml.py  read_excel.py  set_log.py  spdx_licenses.py  time.py  timer_thread.py  write_cyclonedx.py  write_excel.py  write_opossum.py  write_scancodejson.py  write_spdx.py  write_txt.py  write_yaml.py
tests/: _print_log.py  _print_log_with_another_logger.py  conftest.py  constants.py  test_compare_yaml.py  test_convert_to_yaml.py  test_cyclonedx.py  test_decide_checkout.py  test_download.py  test_download_version_hint.py  test_excel.py  test_excel_and_csv.py  test_help.py  test_log.py  test_opossum.py  test_output_format.py  test_spdx_licenses.py  test_text.py  test_timer.py  test_write_excel_hidden_sheet.py  test_write_output.py  test_write_yaml.py  test_yaml.py
tests/legacy/: _print_log.py  test_compare_yaml.py  test_convert_to_yaml.py  test_download.py  test_excel_and_csv.py  test_help.py  test_opossum.py  test_output_format.py  test_text.py  test_yaml.py
tests/pytest/: conftest.py  test_compare_yaml.py  test_convert_to_yaml.py  test_download.py  (+5 more)
(+9 files in other folders)
