# Copyright (c) 2026 LG Electronics
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fosslight_util"
version = "2.1.51"
description = "FOSSLight Util"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "LG Electronics" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "XlsxWriter",
    "pandas",
    "openpyxl",
    "progress",
    "PyYAML",
    "lastversion",
    "coloredlogs",
    "beautifulsoup4",
    "jsonmerge",
    "spdx-tools==0.8.2; sys_platform == 'linux'",
    "setuptools>=65.5.1",
    "numpy",
    "requests",
    "GitPython",
    "cyclonedx-python-lib==8.5.*; sys_platform == 'linux'",
    "defusedxml",
]

[project.urls]
Homepage = "https://github.com/fosslight/fosslight_util"
Download = "https://github.com/fosslight/fosslight_util"

[project.scripts]
fosslight_download = "fosslight_util.download:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fosslight_util = [
    "resources/frequentLicenselist.json",
    "resources/licenses.json",
    "resources/frequent_license_nick_list.json",
]
